[package]
name = "bevy_ggrs"
version = "0.1.0"
authors = ["Georg Schuppe <georg.schuppe@gmail.com>"]
edition = "2018"
description = "Bevy plugin for the GGRS P2P rollback networking library"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gschup/bevy_ggrs"
homepage = "https://gschup.github.io/ggrs/"
keywords = ["gamedev", "networking", "ggpo", "rollback", "bevy", "ggrs"]
categories = ["network-programming", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "51a5070cd2d3d7262616b2efc8a6cd3b1991d7e6", default-features = false }
ggrs = { git = "https://github.com/gschup/ggrs", rev = "6ab94d96fbebcfe096f9de13ff8d60b1a2b4fa73" }

[dev-dependencies]
structopt = { version = "0.2", default-features = false }
bevy = { git = "https://github.com/bevyengine/bevy", rev = "51a5070cd2d3d7262616b2efc8a6cd3b1991d7e6", default-features = false }

# Examples
[[example]]
name = "box_game_synctest"
path = "examples/box_game/box_game_synctest.rs"

[[example]]
name = "box_game_p2p"
path = "examples/box_game/box_game_p2p.rs"

[[example]]
name = "box_game_spectator"
path = "examples/box_game/box_game_spectator.rs"