[package]
name = "bevy_ggrs"
version = "0.1.0"
authors = ["Georg Schuppe <georg.schuppe@gmail.com>"]
edition = "2018"
description = "Bevy plugin for the GGRS P2P rollback networking library"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gschup/bevy_ggrs"
homepage = "https://gschup.github.io/ggrs/"
keywords = ["gamedev", "networking", "ggpo", "rollback", "bevy", "ggrs"]
categories = ["network-programming", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "=1.0.65" }
bevy = { version = "0.5.0", default-features = false }
ggrs = { version = "0.4.4" }

[dev-dependencies]
structopt = { version = "0.2", default-features = false }
bevy = { version = "0.5.0", default-features = false }

# Examples
[[example]]
name = "box_game_synctest"
path = "examples/box_game/box_game_synctest.rs"

[[example]]
name = "box_game_p2p"
path = "examples/box_game/box_game_p2p.rs"

[[example]]
name = "box_game_spectator"
path = "examples/box_game/box_game_spectator.rs"
